--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -45,6 +45,82 @@
       import React, { useState, useCallback } from 'react';
       import ReactDOM from 'react-dom/client';
       import { GoogleGenAI, Modality } from "@google/genai";
+
+      // === I18n Translations ===
+      const translations = {
+        appTitle: {
+          th: 'สร้างภาพจากข้อความ (Image Generator)',
+          en: 'Image Generator',
+        },
+        appSubtitle: {
+          th: 'จัดทำโดย Chaiwat P. v1.0',
+          en: 'Created by Chaiwat P. v1.0',
+        },
+        generateImageLabel: {
+          th: '1. สร้างภาพ',
+          en: '1. Generate Image',
+        },
+        generatePlaceholder: {
+          th: 'เช่น สิงโตสง่างามสวมมงกุฎในเมืองแห่งอนาคต',
+          en: 'e.g., A majestic lion wearing a crown in a futuristic city',
+        },
+        generateButton: {
+          th: 'สร้าง',
+          en: 'Generate',
+        },
+        editImageLabel: {
+          th: '2. แก้ไขรูปภาพของคุณ',
+          en: '2. Edit Your Image',
+        },
+        editPlaceholder: {
+          th: 'เช่น เปลี่ยนมงกุฎเป็นหมวกพ่อมด',
+          en: 'e.g., Change the crown to a wizard hat',
+        },
+        editButton: {
+          th: 'ใช้การแก้ไข',
+          en: 'Apply Edit',
+        },
+        newImageButton: {
+          th: 'เริ่มรูปภาพใหม่',
+          en: 'Start New Image',
+        },
+        downloadButton: {
+          th: 'ดาวน์โหลด',
+          en: 'Download',
+        },
+        generatingVision: {
+          th: 'กำลังสร้างจินตนาการของคุณ...',
+          en: 'Generating your vision...',
+        },
+        errorOccurred: {
+          th: 'เกิดข้อผิดพลาด',
+          en: 'An Error Occurred',
+        },
+        imageWillAppear: {
+          th: 'รูปภาพของคุณจะปรากฏที่นี่',
+          en: 'Your image will appear here',
+        },
+        enterPromptInstruction: {
+          th: 'ป้อนข้อความแล้วคลิก "สร้าง" เพื่อเริ่มสร้าง',
+          en: 'Enter a prompt and click "Generate" to start creating.',
+        },
+        downloadAria: {
+          th: 'ดาวน์โหลดรูปภาพ',
+          en: 'Download image',
+        },
+        previousAria: {
+          th: 'รูปภาพก่อนหน้า',
+          en: 'Previous image',
+        },
+        nextAria: {
+          th: 'รูปภาพถัดไป',
+          en: 'Next image',
+        },
+        dismissErrorAria: {
+          th: 'ปิดข้อความข้อผิดพลาด',
+          en: 'Dismiss error message',
+        },
+      };
 
       // === From utils/fileUtils.ts ===
       const downloadImage = (dataUrl, filename) => {
@@ -217,16 +293,22 @@
       );
 
       // === From components/Header.tsx ===
-      const Header = () => {
+      const Header = ({ t, language, onToggleLanguage }) => {
         return (
           <header className="bg-gray-800 shadow-md">
-            <div className="container mx-auto px-4 py-4 sm:px-6 lg:px-8 text-center">
+            <div className="container mx-auto px-4 py-4 sm:px-6 lg:px-8 relative text-center">
               <h1 className="text-2xl sm:text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">
-                สร้างภาพจากข้อความ (Image Generator)
+                {t('appTitle')}
               </h1>
               <p className="text-sm text-gray-400 mt-1">
-                จัดทำโดย Chaiwat P. v1.0
+                {t('appSubtitle')}
               </p>
+              <button
+                onClick={onToggleLanguage}
+                className="absolute top-1/2 -translate-y-1/2 right-4 sm:right-6 lg:right-8 bg-gray-700 hover:bg-gray-600 text-gray-200 font-semibold py-2 px-4 rounded-lg transition-colors duration-200 text-sm"
+              >
+                {language === 'th' ? 'EN' : 'TH'}
+              </button>
             </div>
           </header>
         );
@@ -234,6 +316,7 @@
 
       // === From components/ImageDisplay.tsx ===
       const ImageDisplay = ({ 
+        t,
         imageUrl, 
         isLoading, 
         error, 
@@ -250,7 +333,7 @@
             return (
               <div className="flex flex-col items-center justify-center gap-4">
                 <LoadingSpinner />
-                <p className="text-lg text-gray-400">Generating your vision...</p>
+                <p className="text-lg text-gray-400">{t('generatingVision')}</p>
               </div>
             );
           }
@@ -258,7 +341,7 @@
             return (
               <div className="flex flex-col items-center justify-center gap-4 text-center p-6 bg-red-900/20 border border-red-500/30 rounded-lg max-w-lg mx-auto">
                 <ErrorIcon className="w-16 h-16 text-red-400/80" />
-                <h3 className="text-xl font-semibold text-red-300">An Error Occurred</h3>
+                <h3 className="text-xl font-semibold text-red-300">{t('errorOccurred')}</h3>
                 <p className="text-base text-red-300/80">{error}</p>
               </div>
             );
@@ -275,8 +358,8 @@
           return (
             <div className="flex flex-col items-center justify-center gap-4 text-gray-500">
               <ImageIcon className="w-24 h-24" />
-              <p className="text-xl font-medium">Your image will appear here</p>
-              <p className="text-center">Enter a prompt and click "Generate" to start creating.</p>
+              <p className="text-xl font-medium">{t('imageWillAppear')}</p>
+              <p className="text-center">{t('enterPromptInstruction')}</p>
             </div>
           );
         };
@@ -288,10 +371,10 @@
               <button
                 onClick={onDownload}
                 className="absolute top-4 right-4 bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-full inline-flex items-center gap-2 transition-transform duration-200 transform hover:scale-105 shadow-lg"
-                aria-label="Download image"
+                aria-label={t('downloadAria')}
               >
                 <DownloadIcon />
-                <span>Download</span>
+                <span>{t('downloadButton')}</span>
               </button>
             )}
              {imageUrl && !isLoading && !error && historyCount && historyCount > 1 && (
@@ -300,7 +383,7 @@
                   onClick={onPrevious}
                   disabled={!canPrevious}
                   className="p-2 rounded-full bg-purple-600 hover:bg-purple-700 text-white disabled:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
-                  aria-label="Previous image"
+                  aria-label={t('previousAria')}
                 >
                   <PreviousIcon className="w-4 h-4" />
                 </button>
@@ -309,7 +392,7 @@
                   onClick={onNext}
                   disabled={!canNext}
                   className="p-2 rounded-full bg-purple-600 hover:bg-purple-700 text-white disabled:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
-                  aria-label="Next image"
+                  aria-label={t('nextAria')}
                 >
                   <NextIcon className="w-4 h-4" />
                 </button>
@@ -321,6 +404,7 @@
 
       // === From components/Controls.tsx ===
       const Controls = ({
+        t,
         generatePrompt,
         setGeneratePrompt,
         onGenerate,
@@ -336,13 +420,13 @@
             {/* Generate Section */}
             <div className="flex flex-col gap-4">
               <label htmlFor="generate-prompt" className="text-lg font-semibold text-gray-300">
-                1. Generate Image
+                {t('generateImageLabel')}
               </label>
               <textarea
                 id="generate-prompt"
                 value={generatePrompt}
                 onChange={(e) => setGeneratePrompt(e.target.value)}
-                placeholder="e.g., A majestic lion wearing a crown in a futuristic city"
+                placeholder={t('generatePlaceholder')}
                 rows={4}
                 disabled={isLoading || hasImage}
                 className="w-full bg-gray-900 border border-gray-700 rounded-md p-3 text-gray-200 focus:ring-2 focus:ring-purple-500 focus:border-purple-500 transition duration-200 disabled:opacity-50"
@@ -352,20 +436,20 @@
                 disabled={isLoading || hasImage || !generatePrompt.trim()}
                 className="w-full flex justify-center items-center gap-2 bg-gradient-to-r from-purple-600 to-pink-600 hover:from-purple-700 hover:to-pink-700 text-white font-bold py-3 px-4 rounded-md transition duration-200 transform hover:scale-105 disabled:opacity-50 disabled:cursor-not-allowed disabled:scale-100"
               >
-                {isLoading && !hasImage ? <LoadingSpinner className="w-5 h-5" /> : 'Generate'}
+                {isLoading && !hasImage ? <LoadingSpinner className="w-5 h-5" /> : t('generateButton')}
               </button>
             </div>
 
             {/* Edit Section */}
             <div className={`flex flex-col gap-4 transition-opacity duration-500 ${hasImage ? 'opacity-100' : 'opacity-40'}`}>
               <label htmlFor="edit-prompt" className="text-lg font-semibold text-gray-300">
-                2. Edit Your Image
+                {t('editImageLabel')}
               </label>
               <textarea
                 id="edit-prompt"
                 value={editPrompt}
                 onChange={(e) => setEditPrompt(e.target.value)}
-                placeholder="e.g., Change the crown to a wizard hat"
+                placeholder={t('editPlaceholder')}
                 rows={3}
                 disabled={!hasImage || isLoading}
                 className="w-full bg-gray-900 border border-gray-700 rounded-md p-3 text-gray-200 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition duration-200 disabled:opacity-50"
@@ -375,7 +459,7 @@
                 disabled={!hasImage || isLoading || !editPrompt.trim()}
                 className="w-full flex justify-center items-center gap-2 bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-md transition duration-200 transform hover:scale-105 disabled:opacity-50 disabled:cursor-not-allowed disabled:scale-100"
               >
-                {isLoading && hasImage ? <LoadingSpinner className="w-5 h-5" /> : 'Apply Edit'}
+                {isLoading && hasImage ? <LoadingSpinner className="w-5 h-5" /> : t('editButton')}
               </button>
             </div>
 
@@ -386,7 +470,7 @@
                   className="w-full flex justify-center items-center gap-2 bg-gray-600 hover:bg-gray-700 text-white font-bold py-3 px-4 rounded-md transition duration-200 transform hover:scale-105 disabled:opacity-50 disabled:cursor-not-allowed"
                 >
                   <NewImageIcon />
-                  Start New Image
+                  {t('newImageButton')}
                 </button>
             </div>
           </div>
@@ -394,7 +478,7 @@
       };
 
       // === From App.tsx ===
-      const ErrorBanner = ({ message, onDismiss }) => {
+      const ErrorBanner = ({ message, onDismiss, t }) => {
         if (!message) return null;
 
         return (
@@ -409,7 +493,7 @@
             <button 
               onClick={onDismiss} 
               className="p-1 rounded-full hover:bg-red-600/50 transition-colors" 
-              aria-label="Dismiss error message"
+              aria-label={t('dismissErrorAria')}
             >
               <CloseIcon className="w-5 h-5" />
             </button>
@@ -418,6 +502,7 @@
       };
 
       const App = () => {
+        const [language, setLanguage] = useState('th');
         const [generatePrompt, setGeneratePrompt] = useState('');
         const [editPrompt, setEditPrompt] = useState('');
         const [imageHistory, setImageHistory] = useState([]);
@@ -427,6 +512,17 @@
         const [error, setError] = useState(null);
 
         const currentImageUrl = imageHistory[historyIndex] ?? null;
+        
+        const t = useCallback((key) => {
+          return translations[key]?.[language] || key;
+        }, [language]);
+
+        const toggleLanguage = useCallback(() => {
+          const newLang = language === 'th' ? 'en' : 'th';
+          setLanguage(newLang);
+          document.documentElement.lang = newLang;
+          document.title = translations.appTitle[newLang];
+        }, [language]);
 
         const handleGenerate = useCallback(async () => {
           if (!generatePrompt.trim() || isLoading) return;
@@ -494,12 +590,13 @@
 
         return (
           <div className="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
-            <Header />
+            <Header t={t} language={language} onToggleLanguage={toggleLanguage} />
             <main className="flex-grow container mx-auto p-4 lg:p-8 flex flex-col">
-              {error && <ErrorBanner message={error} onDismiss={() => setError(null)} />}
+              {error && <ErrorBanner message={error} onDismiss={() => setError(null)} t={t} />}
               <div className="flex flex-col lg:flex-row gap-8">
                 <div className="lg:w-1/3 flex flex-col space-y-8">
                   <Controls
+                    t={t}
                     generatePrompt={generatePrompt}
                     setGeneratePrompt={setGeneratePrompt}
                     onGenerate={handleGenerate}
@@ -513,6 +610,7 @@
                 </div>
                 <div className="lg:w-2/3 flex flex-col">
                   <ImageDisplay
+                    t={t}
                     imageUrl={currentImageUrl}
                     isLoading={isLoading}
                     error={error}
